# 3d

./: main.py  pyproject.toml
fonts/: license.txt  readme.txt
models/: square.py  text.py  triangle.py
shaders/: default.frag  default.vert  text.frag  text.vert
