
[tool.poetry]
name = "3d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
moderngl = "^5.12.0"
glfw = "^2.7.0"
numpy = "^2.1.2"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
